yaml-config/clusterip.yml
apiVersion: v1
kind: Service
metadata:
    name: clusterip-test-name
spec:
    type: ClusterIP
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: test-app
status:
    loadBalancer: {}
