yaml-config/nodeport.yml
apiVersion: v1
kind: Service
metadata:
    name: nodeport-test-name
spec:
    type: NodePort
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: test-app
