yaml-config/ingress.yml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-uri
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  #- host: testk8s.com
  - http:
      paths:
      - path: /home #/*
        backend:
          serviceName: clusterip-test-name
          servicePort: 5000
